# codebattle

./: '  .babelrc  .bootstraprc  .credo.exs  .dockerignore  .editorconfig  .env  .env.example  .formatter.exs  .gitignore  .mcp.json  .tool-versions  .travis.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile.codebattle  Containerfile.runner  Dockerfile  FAQ.md  Makefile  README.md  ROADMAP.md  TODO_LERA  TOURNAMENTS_EN.md  TOURNAMENTS_RU.md  TournamentTODO.md  ansible.cfg  compile  compose.yml  distr.env  docker-compose.yml  elixir_buildpack.config  erlang-solutions_1.0_all.deb  issues1173.py  make-ansible.mk  make-compose.mk  make-production.mk  mix.exs  (+7 more)
.customizations/: setup_repos.py
.deliver/: config.example
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugreport.yml
.github/workflows/: master.yml  package.yaml  pr.yml  push_master.yml  run_tests.yml  tests_run_on_PR.yml  tests_run_on_push.yml
.kube/: config
.lsp/.cache/: db.transit.json
ansible/: ansible.cfg  deploy.yml  development.yml  langs.yml  local.terraform.yml  pull_dockers.yml  site.yml  tasks.yml  terraform.yml  upload_asserts.yml
ansible/development/: inventory
ansible/group_vars/: all.yml
ansible/production/: inventory
ansible/templates/: environment.j2  secrets.auto.tfvars.j2
apps/codebattle/: .babelrc  .formatter.exs  .gitignore  .oxlintrc.json  .stylelintrc.json  mix.exs  package.json  pnpm-lock.yaml  vite.config.js
apps/phoenix_gon/: README.md
apps/runner/: .formatter.exs  mix.exs
assets/: .babelrc  .bootstraprc  .eslintrc.yml  package-lock.json  package.json  webpack.config.js  webpack.devserver.js
assets/css/: app.scss  pre-bootstrap-customizations.scss
assets/js/: app.js  gameChat.js  package.json  socket.js
checkers/js/: Makefile  checker.js
checkers/ruby/: Makefile  checker.rb
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docker/web/: Dockerfile
dockers/: Dockerfile
dockers/elixir/: Dockerfile  Makefile  checker.exs  mix.exs  spec_helper.exs
docs/: 001_product_review.md  002_tournament_gameplay_and_matches.md  003_swiss_tournament.md  004-seasons-and-points.md  005_elo_rating.md  006-scheduling-and-automation.md  007-hall-of-fame.md  008-anti-cheat.md  009-streamer-websocket.md  realtime-editor-plan.md
k8s/: Makefile  flux.cue  values-nginx-ingress.yml
lib/: codebattle.ex  codebattle_web.ex
new_terraform/: .terraform.lock.hcl  config.tf  datasource.tf  main.tf  outputs.tf  providers.tf  secrets.tf  variables.tf
rel/: config.exs
services/app/apps/runner/dockers/haskell/: Dockerfile  Makefile  checker.cabal  checker_example.hs  magic.hs
services/app/apps/runner/dockers/haskell/Check/: Checker.hs  Solution.hs
services/app/apps/runner/dockers/haskell/check/: Main.hs  Solution.hs
services/app/apps/runner/dockers/rust/: Cargo.toml  Dockerfile  Makefile  runner.rs
services/app/apps/runner/dockers/rust/check/: checker.rs  solution.rs
services/app/apps/runner/images/haskell/: Containerfile  LICENSE  Makefile  cabal.project  checker.cabal
services/app/apps/runner/images/haskell/check/: Checker.hs
terraform/: cloudflare.tf  datasource.tf  kubernetes.tf  kubernetes_secretes.tf  main.tf  roles.tf  secrets.tf  varables.tf  variables.tf
test/: test_helper.exs
tools/ars/: go.mod  (+2 more)
web/: gettext.ex  router.ex  web.ex
(+3768 files in other folders)
