cabal-version:       3.0
name:                checker
version:             0.1.0.1

license:             MIT
license-file:        LICENSE

category:            Game
build-type:          Simple

author:              kjubybot
maintainer:          kjubybot@proton.me

executable Checker
  main-is:             Checker.hs
  other-modules:       Solution
  hs-source-dirs:      check
  default-language:    Haskell2010

  build-depends:       base >=4.17 && <5
                     , aeson
                     , bytestring
                     , case-insensitive
                     , containers
                     , deepseq
                     , fgl
                     , integer-logarithms
                     , megaparsec
                     , mtl
                     , parser-combinators
                     , pretty
                     , random
                     , regex-base
                     , regex-compat
                     , regex-posix
                     , scientific
                     , split
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
                     , vector-algorithms
